--- a/index.html
+++ b/index.html
@@ -84,6 +84,23 @@
     </div>
   </section><!-- End Hero -->
 
+  <div id="mobile-contact-bar" class="sticky-top py-3">
+    <div class="row justify-content-center align-items-center">
+      <div class="col-2">
+        <a href="#"><img class="img-fluid" src="assets/img/logo.svg"/></a>
+      </div>
+      <div class="col-8">
+          <a href="mailto:suzy@beside.coach" class="emailme" data-bs-toggle="popover" data-bs-trigger="hover focus"
+            data-bs-content="Email me" data-bs-placement="bottom" data-bs-custom-class="custom-popover">
+            <i class='bx bx-mail-send'></i></a>
+          <a href="https://www.linkedin.com/in/suzannestollery/" class="linkedin" data-bs-toggle="popover"
+            data-bs-trigger="hover focus" data-bs-content="Find me on LinkedIn" data-bs-placement="bottom"
+            data-bs-custom-class="custom-popover">
+            <i class="bx bxl-linkedin"></i></a>
+      </div>
+    </div>
+  </div>
+
   <main id="main">
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
@@ -252,10 +269,10 @@
                 <h3>Will</h3>
                 <h4>Chief Executive Officer - Ecosurety</h4>
                 <p>
-                  <strong style="color: var(--link);">“ </strong>Suzy helped me settle into a new CEO role in a new company and in a new industry. I
+                  <strong>“ </strong>Suzy helped me settle into a new CEO role in a new company and in a new industry. I
                   found her thoughtful approach very helpful in getting to the core of issues and
                   defining specific next steps. I would recommend Suzy to anyone looking for a caring,
-                  intelligent and insightful coach.<strong style="color: var(--link);">”</strong>
+                  intelligent and insightful coach.<strong>”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -265,11 +282,11 @@
                 <h3>Anna</h3>
                 <h4>Strategy Director - Bray Leino</h4>
                 <p>
-                  <strong style="color: var(--link);">“ </strong>
+                  <strong>“ </strong>
                   Working with Suzy was a game-changer for me. I appreciated her professional yet down
                   to earth style. Our coaching sessions were always purposeful and, very skilfully,
                   she helped guide me to my own conclusions, with a clarity that I just couldn't
-                  create on my own.<strong style="color: var(--link);">”</strong>
+                  create on my own.<strong>”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -279,11 +296,11 @@
                 <h3>Will</h3>
                 <h4>Chief Operating Officer - Ella's Kitchen</h4>
                 <p>
-                  <strong style="color: var(--link);">“ </strong>
+                  <strong>“ </strong>
                   Suzy creates an environment that is not just safe, but easy to express how I feel. I
                   can now use emotions and feelings as information on what to do next, and I have a
                   far greater awareness, understanding, and choice of how I want to be as a leader.
-                  It's been a brilliant experience all round.<strong style="color: var(--link);">”</strong>
+                  It's been a brilliant experience all round.<strong>”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -293,11 +310,11 @@
                 <h3>Anne-Cecile</h3>
                 <h4>Commercial Strategy Director - Universal Pictures International</h4>
                 <p>
-                  <strong style="color: var(--link);">“ </strong>
+                  <strong>“ </strong>
                   Suzy is a natural coach! She created a safe environment and a space I could openly
                   express myself. Her ability to listen and connect enabled me to see the paths and
                   choices available to me and it truly amazed me. The pace and depth of each session
-                  were perfectly balanced too. I highly recommend Suzy.<strong style="color: var(--link);">”</strong>
+                  were perfectly balanced too. I highly recommend Suzy.<strong>”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -307,11 +324,11 @@
                 <h3>Seb</h3>
                 <h4>Co-Founder - Pukka Herbs</h4>
                 <p>
-                  <strong style="color: var(--link);">“ </strong>
+                  <strong>“ </strong>
                   High emotional awareness coupled with practical professional clarity creates instant
                   trust and respect. Having a particular skill at developing leadership talent, she
-                  successfully helped our directors' grow with the pace of the business, as well as
-                  create an impactful team spirit, in the face of relentless change.<strong style="color: var(--link);">”</strong>
+                  successfully helped our directors grow with the pace of the business, as well as
+                  create an impactful team spirit, in the face of relentless change.<strong>”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -321,11 +338,11 @@
                 <h3>Kim</h3>
                 <h4>Commercial Director - Ella's Kitchen</h4>
                 <p>
-                  <strong style="color: var(--link);">“ </strong>
+                  <strong>“ </strong>
                   Suzy is a highly professional and warm coach who creates an open environment to
                   explore vulnerabilities, thoughts, emotions and ideas which helped me navigate ways
                   forward. I have benefited heavily from her thoughtful and astute questioning which
-                  created very positive changes in me personally and within my role.<strong style="color: var(--link);">”</strong>
+                  created very positive changes in me personally and within my role.<strong>”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -335,15 +352,12 @@
                 <h3>Bruno</h3>
                 <h4>EMEA Senior Counsel - BASF</h4>
                 <p>
-                  <strong style="color: var(--link);">“ </strong>
+                  <strong>“ </strong>
                   I had the chance to work with Suzy when I was at a crossroads in my career and had
-                  recently taken a new role. Our division had just been sold to another company and
-                  was going through unprecedented changes. Rationally, I knew this whole situation
-                  presented a unique opportunity for professional development. Emotionally, I felt
-                  insecure. I feel I have grown significantly in my new role and there is no doubt in
+                  recently taken a new role. I feel I have grown significantly and there is no doubt in
                   my mind that Suzy, in the way she was engaged in our coaching sessions, has played a
                   significant role in that growth. She just has this talent to bring out the best in
-                  people.<strong style="color: var(--link);">”</strong>
+                  people.<strong>”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -353,11 +367,11 @@
                 <h3>Ann</h3>
                 <h4>Director of Finance - NHS Trust</h4>
                 <p>
-                  <strong style="color: var(--link);">“ </strong>
+                  <strong>“ </strong>
                   Working with Suzy helped me evaluate the way I work and think about different ways
                   to respond to problems which I'd previously struggled to solve. She also helped me
                   to identify ways I could strengthen relationships with people with different styles
-                  of working to myself whilst developing different ways of thinking and operating.<strong style="color: var(--link);">”</strong>
+                  of working to myself whilst developing different ways of thinking and operating.<strong>”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -367,14 +381,11 @@
                 <h3>Camilla</h3>
                 <h4>Co-Founder - Women's Work Lab</h4>
                 <p>
-                  <strong style="color: var(--link);">“ </strong>
-                  We feel extremely fortunate to have had Suzy's leadership coaching during a period
-                  of exceptional growth. She's helped us create an exceptionally strong foundation
-                  within our Co-Founder partnership - guiding us to see where our individual strengths
-                  lie, whilst also recognising how we complement one another. It really has been such
-                  a joy, and we feel that the work we've done will help us to weather any inevitable
-                  future storms and grow in a way that sees us both working at our best. It really has
-                  been a transformational experience for both of us.<strong style="color: var(--link);">”</strong>
+                  <strong>“ </strong>
+                  Suzy's leadership coaching has been a transformational experience for both of us. She's helped us create an exceptionally strong foundation
+                  within our Co-Founder partnership &mdash; guiding us to see where our individual strengths
+                  lie, whilst also recognising how we complement one another. We feel that the work we've done will help us to weather any inevitable
+                  future storms and grow in a way that sees us both working at our best.<strong>”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -384,13 +395,13 @@
                 <h3>Kieran</h3>
                 <h4>Global Account Director - Aon</h4>
                 <p>
-                  <strong style="color: var(--link);">“ </strong>
+                  <strong>“ </strong>
                   Suzy worked with me when I was going through a period of real change in my
                   professional
                   life. I had just taken on a new role which was both demanding and high profile. Suzy
                   brought a real wealth of experience, and her style is both calming and reassuring in
                   equal measure. She is an informed, capable coach and very likeable on a personal
-                  level. I would have no hesitancy in recommending her.<strong style="color: var(--link);">”</strong>
+                  level. I would have no hesitancy in recommending her.<strong>”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
