--- a/index.html
+++ b/index.html
@@ -84,12 +84,13 @@
     </div>
   </section><!-- End Hero -->
 
+  <!---->
   <div id="mobile-contact-bar" class="sticky-top py-3">
     <div class="row justify-content-center align-items-center">
       <div class="col-2">
         <a href="#"><img class="img-fluid" src="assets/img/logo.svg"/></a>
       </div>
-      <div class="col-8">
+      <div class="mobile-links col-8">
           <a href="mailto:suzy@beside.coach" class="emailme" data-bs-toggle="popover" data-bs-trigger="hover focus"
             data-bs-content="Email me" data-bs-placement="bottom" data-bs-custom-class="custom-popover">
             <i class='bx bx-mail-send'></i></a>
