--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <div class="row">
         <div class="col">
-          <img class="img-fluid" src="assets/img/logo.svg" />
+          <img class="img-fluid" src="assets/img/logo.svg" alt="Beside company logo - it represents two people side by side - both working on a problem in the centre."/>
         </div>
       </div>
       <div class="row">
@@ -112,7 +112,7 @@
 
         <div class="row">
           <div class="col-lg-4 col-sm-10 mx-auto px-5 px-md-2 pe-lg-4">
-            <img id="profile" src="assets/img/profile-img.jpg" class="img-fluid"
+            <img id="profile" src="assets/img/profile.webp" class="img-fluid"
               alt="Profile picture of Suzy Stollery." />
           </div>
           <div class="col-lg-8 content px-4 px-md-2">
