--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Beside: Executive coaching, culture consultancy, and HR mentoring.</title>
-  <meta content="I'm here as your coach, consultant, and mentor. As a former global Chief People Officer, I've played integral roles in building and steering global
-    leadership teams through periods of transformational change and growth. I've partnered with, and coached,
-    many leaders including Founders and C-suite teams." name="description">
+  <title>Beside: Executive coaching, Culture consultancy, and HR mentoring.</title>
+  <meta content="I'm here as your coach, consultant and mentor. As a Chief People Officer, I've held integral roles building and steering global leadership teams through transformational change and growth. One-on-one structured coaching programmes for leaders. Consulting or mentoring – getting involved from within. Online. In person. On foot. Tailored. Constant progress." name="description">
   <meta content="Executive Coach, Culture Consultant, HR Mentor." name="keywords">
 
   <!-- Favicons -->
