Fixes for LinkedIn links

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Beside: Executive coaching, Culture consultancy, and HR mentoring.</title>
-  <meta content="I'm here as your coach, consultant and mentor. As a Chief People Officer, I've held integral roles building and steering global leadership teams through transformational change and growth. One-on-one structured coaching programmes for leaders. Consulting or mentoring – getting involved from within. Online. In person. On foot. Tailored. Constant progress." name="description">
+  <meta property="og:description" content="I'm here as your coach, consultant and mentor. As a Chief People Officer, I've held integral roles building and steering global leadership teams through transformational change and growth. One-on-one structured coaching programmes for leaders. Consulting or mentoring – getting involved from within. Online. In person. On foot. Tailored. Constant progress." name="description">
   <meta content="Executive Coach, Culture Consultant, HR Mentor." name="keywords">
+  <meta name="image" property="og:image" content="assets/img/profile.webp">
+  <meta name="author" content="Suzy Stollery">
+  <meta name="title" property="og:title" content="Beside: Executive coaching, Culture consultancy, and HR mentoring.">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
