--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Beside: Executive coaching, Culture consultancy, and HR mentoring.</title>
+  <title>Beside: Executive Coaching, Culture Consultancy, and HR Mentoring.</title>
   <meta property="og:description" content="I'm here as your coach, consultant and mentor. As a Chief People Officer, I've held integral roles building and steering global leadership teams through transformational change and growth. One-on-one structured coaching programmes for leaders. Consulting or mentoring – getting involved from within. Online. In person. On foot. Tailored. Constant progress." name="description">
   <meta content="Executive Coach, Culture Consultant, HR Mentor." name="keywords">
   <meta name="image" property="og:image" content="assets/img/profile.webp">
