--- a/index.html
+++ b/index.html
@@ -268,6 +268,19 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
+                <h3>James, OBE</h3>
+                <h4>Former Chair, Pukka Herbs </h4>
+                <p>
+                  <strong>“ </strong>Pukka's culture benefited hugely from Suzy’s Leadership as People Director. 
+                  Her culture work ensured that the purpose and values that were outwardly expressed were truly present within and without compromise. 
+                  Finding people with the skill to translate the often ethereal into grounded practice is a rare thing. 
+                  Suzy has that in abundance, as well a natural sensitivity that enables her to bring people with her in a very thoughtful and considered way.<strong>”</strong>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+            
+            <div class="swiper-slide">
+              <div class="testimonial-item">
                 <h3>Will</h3>
                 <h4>Chief Executive Officer - Ecosurety</h4>
                 <p>
