--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
       <ul>
         <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a>
         </li>
-        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About me</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class='bx bx-leaf'></i>
             <span>Executive Coach</span></a></li>
         <li><a href="#services" class="nav-link scrollto"><i class='bx bx-show'></i>
             <span>Culture Consultant</span></a></li>
         <li><a href="#testimonials" class="nav-link scrollto"><i class='bx bxs-quote-alt-left'></i><span>What clients
               say</span></a></li>
+        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About me</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Work with
               Beside</span></a>
         </li>
@@ -71,7 +71,8 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <div class="row">
         <div class="col">
-          <img class="img-fluid" src="assets/img/logo.svg" alt="Beside company logo - it represents two people side by side - both working on a problem in the centre."/>
+          <img class="img-fluid" src="assets/img/logo.svg"
+            alt="Beside company logo - it represents two people side by side - both working on a problem in the centre." />
         </div>
       </div>
       <div class="row">
@@ -84,100 +85,31 @@
     </div>
   </section><!-- End Hero -->
 
-  <!---->
+  <!-- Mobile Nav Bar -->
   <div id="mobile-contact-bar" class="sticky-top py-3">
     <div class="row justify-content-center align-items-center">
       <div class="col-2">
-        <a href="#"><img class="img-fluid" src="assets/img/logo.svg"/></a>
+        <a href="#"><img class="img-fluid" src="assets/img/logo.svg" /></a>
       </div>
       <div class="mobile-links col-8">
-          <a href="mailto:suzy@beside.coach" class="emailme" data-bs-toggle="popover" data-bs-trigger="hover focus"
-            data-bs-content="Email me" data-bs-placement="bottom" data-bs-custom-class="custom-popover">
-            <i class='bx bx-mail-send'></i></a>
-          <a href="https://www.linkedin.com/in/suzannestollery/" class="linkedin" data-bs-toggle="popover"
-            data-bs-trigger="hover focus" data-bs-content="Find me on LinkedIn" data-bs-placement="bottom"
-            data-bs-custom-class="custom-popover">
-            <i class="bx bxl-linkedin"></i></a>
+        <a href="mailto:suzy@beside.coach" class="emailme" data-bs-toggle="popover" data-bs-trigger="hover focus"
+          data-bs-content="Email me" data-bs-placement="bottom" data-bs-custom-class="custom-popover">
+          <i class='bx bx-mail-send'></i></a>
+        <a href="https://www.linkedin.com/in/suzannestollery/" class="linkedin" data-bs-toggle="popover"
+          data-bs-trigger="hover focus" data-bs-content="Find me on LinkedIn" data-bs-placement="bottom"
+          data-bs-custom-class="custom-popover">
+          <i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </div>
 
   <main id="main">
-    <!-- ======= About Section ======= -->
-    <section id="about" class="about">
-      <div class="container" data-aos="fade-up">
-        <div class="section-title px-4">
-          <h2>About me</h2>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4 col-sm-10 mx-auto px-5 px-md-2 pe-lg-4">
-            <img id="profile" src="assets/img/profile.webp" class="img-fluid"
-              alt="Profile picture of Suzy Stollery." />
-          </div>
-          <div class="col-lg-8 content px-4 px-md-2">
-            <p class="leadin">Welcome. I'm here as your coach, consultant and mentor. </p>
-            <p>As a Chief People Officer, I've held integral roles building and steering global leadership teams
-              through transformational change and growth.
-            </p>
-            <p>
-              From founder led start-ups to complex global organisations, I have a deep understanding of organisational
-              dynamics and their nuances. I help navigate challenges and identify opportunities, creating impact for all
-              stakeholders.
-            </p>
-            <p>
-              I coach leaders to sharpen their awareness and effectiveness. I consult and mentor to create successful
-              cultures that people want to be a part of, and where they can thrive.
-            </p>
-            <p>
-              I work with boards, c-suite teams, leadership teams and HR leaders. Start-ups, scale-ups, large
-              organisations and non-profits. </p>
-            <p><em style="color: var(--accent); font-weight: 600; font-size: 18px">I specialise in:</em>
-            </p>
-            <ul>
-              <li><strong>Executive and leadership one-on-one coaching programmes</strong>
-              </li>
-              <li><strong>Culture and HR strategy development</strong></li>
-              <li><strong>Mentoring HR leaders</strong> </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="container" data-aos="fade-up">
-        <div class="row">
-          <div class="col-lg-10 col-md-6 content pt-3 px-4 px-md-2 mx-auto">
-            <h3>Experience</h3>
-            <div class="row experience">
-              <div class="col-lg-6">
-                <ul>
-                  <li><strong>20+ years Leadership, Development, Coaching and HR
-                      experience</strong>
-                  </li>
-                  <li><strong>EMCC Accredited Executive Coach, Senior
-                      Practitioner</strong></li>
-                  <li><strong>ICF Accredited Emotions Coaching Practitioner</strong>
-                  </li>
-                  <li><strong>Leadership roles at Dyson, Pukka Herbs, Unilever, Lipton and Motorola</strong></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li> <strong>MA Human Resources Management</strong>
-                  </li>
-                  <li><strong>Fellow CIPD</strong></li>
-                  <li><strong>Board Trustee</strong></li>
-                  <li><strong>Mental Health First Aider (MHFA England)</strong></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section><!-- End About Section -->
 
     <!-- ======= Resume (Beside) Section ======= -->
     <section id="resume" class="resume">
       <div class="container" data-aos="fade-up">
+
+        <p class="leadin">Welcome. I'm here as your coach, consultant and mentor. </p>
 
         <div class="section-title px-4">
           <h2>Executive and Leadership Coaching</h2>
@@ -383,9 +315,11 @@
                 <h4>Co-Founder - Women's Work Lab</h4>
                 <p>
                   <strong>“ </strong>
-                  Suzy's leadership coaching has been a transformational experience for both of us. She's helped us create an exceptionally strong foundation
+                  Suzy's leadership coaching has been a transformational experience for both of us. She's helped us
+                  create an exceptionally strong foundation
                   within our Co-Founder partnership &mdash; guiding us to see where our individual strengths
-                  lie, whilst also recognising how we complement one another. We feel that the work we've done will help us to weather any inevitable
+                  lie, whilst also recognising how we complement one another. We feel that the work we've done will help
+                  us to weather any inevitable
                   future storms and grow in a way that sees us both working at our best.<strong>”</strong>
                 </p>
               </div>
@@ -413,6 +347,77 @@
 
       </div>
     </section><!-- End Testimonials Section -->
+
+    <!-- ======= About Section ======= -->
+    <section id="about" class="about">
+      <div class="container" data-aos="fade-up">
+        <div class="section-title px-4">
+          <h2>About me</h2>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4 col-sm-10 mx-auto px-5 px-md-2 pe-lg-4">
+            <img id="profile" src="assets/img/profile.webp" class="img-fluid" alt="Profile picture of Suzy Stollery." />
+          </div>
+          <div class="col-lg-8 content px-4 px-md-2">
+            <p>As a Chief People Officer, I've held integral roles building and steering global leadership teams
+              through transformational change and growth.
+            </p>
+            <p>
+              From founder led start-ups to complex global organisations, I have a deep understanding of organisational
+              dynamics and their nuances. I help navigate challenges and identify opportunities, creating impact for all
+              stakeholders.
+            </p>
+            <p>
+              I coach leaders to sharpen their awareness and effectiveness. I consult and mentor to create successful
+              cultures that people want to be a part of, and where they can thrive.
+            </p>
+            <p>
+              I work with boards, c-suite teams, leadership teams and HR leaders. Start-ups, scale-ups, large
+              organisations and non-profits. </p>
+            <p><em style="color: var(--accent); font-weight: 600; font-size: 18px">I specialise in:</em>
+            </p>
+            <ul>
+              <li><strong>Executive and leadership one-on-one coaching programmes</strong>
+              </li>
+              <li><strong>Culture and HR strategy development</strong></li>
+              <li><strong>Mentoring HR leaders</strong> </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="container" data-aos="fade-up">
+        <div class="row">
+          <div class="col-lg-10 col-md-6 content pt-3 px-4 px-md-2 mx-auto">
+            <h3>Experience</h3>
+            <div class="row experience">
+              <div class="col-lg-6">
+                <ul>
+                  <li><strong>20+ years Leadership, Development, Coaching and HR
+                      experience</strong>
+                  </li>
+                  <li><strong>EMCC Accredited Executive Coach, Senior
+                      Practitioner</strong></li>
+                  <li><strong>ICF Certified Emotions Coaching Practitioner</strong>
+                  </li>
+                  <li><strong>Leadership roles at Dyson, Pukka Herbs, Unilever, Lipton and Motorola</strong></li>
+                </ul>
+              </div>
+              <div class="col-lg-6">
+                <ul>
+                  <li> <strong>MA Human Resources Management</strong>
+                  </li>
+                  <li><strong>Fellow CIPD</strong></li>
+                  <li><strong>Board Trustee</strong></li>
+                  <li><strong>Mental Health First Aider (MHFA England)</strong></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section><!-- End About Section -->
+
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -466,9 +471,10 @@
         </div>
         <div class="col-4 col-lg-2">
           <img src="assets/img/emotions-coach.png" loading="lazy"
-            alt="Emotions Coaching Practitioner logo. I'm a certified Emotions Coaching Practitioner." data-bs-toggle="popover"
-            data-bs-trigger="hover focus" data-bs-content="I'm a certified Emotions Coaching Practitioner"
-            data-bs-placement="bottom" data-bs-custom-class="custom-popover" />
+            alt="Emotions Coaching Practitioner logo. I'm a certified Emotions Coaching Practitioner."
+            data-bs-toggle="popover" data-bs-trigger="hover focus"
+            data-bs-content="I'm a certified Emotions Coaching Practitioner" data-bs-placement="bottom"
+            data-bs-custom-class="custom-popover" />
         </div>
         <div class="col-4 col-lg-2">
           <img src="assets/img/hult-logo-black.svg" loading="lazy"
