--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
         </div>
         <div class="col-4 col-lg-2">
           <img src="assets/img/emotions-coach.png" loading="lazy"
-            alt="Emotions Coaching Practitioner logo. I'm a certified Emotions Coaching Practitioner."
+            alt="Emotions Coaching Practitioner logo. I'm a Certified Emotions Coaching Practitioner."
             data-bs-toggle="popover" data-bs-trigger="hover focus"
             data-bs-content="I'm a certified Emotions Coaching Practitioner" data-bs-placement="bottom"
             data-bs-custom-class="custom-popover" />
