--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4 col-sm-10 mx-auto px-5 px-md-2 pe-lg-4">
+          <div class="col-lg-3 col-sm-10 mx-auto px-5 px-md-2 pe-lg-4">
             <img id="profile" src="assets/img/profile.webp" class="img-fluid" alt="Profile picture of Suzy Stollery." />
           </div>
           <div class="col-lg-8 content px-4 px-md-2">
@@ -386,33 +386,31 @@
           </div>
         </div>
       </div>
-      <div class="container" data-aos="fade-up">
+      <div id="experience-box" class="container" data-aos="fade-up">
+        <div class="row experience content">
+          <h3>Experience</h3>
+        </div>
         <div class="row">
-          <div class="col-lg-10 col-md-6 content pt-3 px-4 px-md-2 mx-auto">
-            <h3>Experience</h3>
-            <div class="row experience">
-              <div class="col-lg-6">
-                <ul>
-                  <li><strong>20+ years Leadership, Development, Coaching and HR
-                      experience</strong>
-                  </li>
-                  <li><strong>EMCC Accredited Executive Coach, Senior
-                      Practitioner</strong></li>
-                  <li><strong>ICF Certified Emotions Coaching Practitioner</strong>
-                  </li>
-                  <li><strong>Leadership roles at Dyson, Pukka Herbs, Unilever, Lipton and Motorola</strong></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li> <strong>MA Human Resources Management</strong>
-                  </li>
-                  <li><strong>Fellow CIPD</strong></li>
-                  <li><strong>Board Trustee</strong></li>
-                  <li><strong>Mental Health First Aider (MHFA England)</strong></li>
-                </ul>
-              </div>
-            </div>
+          <div class="col-lg-8">            
+            <ul>
+              <li><strong><i class="bi bi-check2-square"></i>20+ years Leadership, Development, Coaching and HR
+                  experience</strong>
+              </li>
+              <li><strong><i class="bi bi-check2-square"></i>EMCC Accredited Executive Coach, Senior
+                  Practitioner</strong></li>
+              <li><strong><i class="bi bi-check2-square"></i>ICF Certified Emotions Coaching Practitioner</strong>
+              </li>
+              <li><strong><i class="bi bi-check2-square"></i>Leadership roles at Dyson, Pukka Herbs, Unilever, Lipton and Motorola</strong></li>
+            </ul>
+          </div>
+          <div class="col-lg-4">
+            <ul>
+              <li> <strong><i class="bi bi-check2-square"></i>MA Human Resources Management</strong>
+              </li>
+              <li><strong><i class="bi bi-check2-square"></i>Fellow CIPD</strong></li>
+              <li><strong><i class="bi bi-check2-square"></i>Board Trustee</strong></li>
+              <li><strong><i class="bi bi-check2-square"></i>Mental Health First Aider (MHFA England)</strong></li>
+            </ul>
           </div>
         </div>
       </div>
