fix experience box

--- a/index.html
+++ b/index.html
@@ -386,31 +386,33 @@
           </div>
         </div>
       </div>
-      <div id="experience-box" class="container" data-aos="fade-up">
-        <div class="row experience content">
-          <h3>Experience</h3>
-        </div>
-        <div class="row">
-          <div class="col-lg-8">            
-            <ul>
-              <li><strong><i class="bi bi-check2-square"></i>20+ years Leadership, Development, Coaching and HR
-                  experience</strong>
-              </li>
-              <li><strong><i class="bi bi-check2-square"></i>EMCC Accredited Executive Coach, Senior
-                  Practitioner</strong></li>
-              <li><strong><i class="bi bi-check2-square"></i>ICF Certified Emotions Coaching Practitioner</strong>
-              </li>
-              <li><strong><i class="bi bi-check2-square"></i>Leadership roles at Dyson, Pukka Herbs, Unilever, Lipton and Motorola</strong></li>
-            </ul>
+      <div class="container" data-aos="fade-up">
+        <div id="experience-box">
+          <div class="row experience content">
+            <h3>Experience</h3>
           </div>
-          <div class="col-lg-4">
-            <ul>
-              <li> <strong><i class="bi bi-check2-square"></i>MA Human Resources Management</strong>
-              </li>
-              <li><strong><i class="bi bi-check2-square"></i>Fellow CIPD</strong></li>
-              <li><strong><i class="bi bi-check2-square"></i>Board Trustee</strong></li>
-              <li><strong><i class="bi bi-check2-square"></i>Mental Health First Aider (MHFA England)</strong></li>
-            </ul>
+          <div class="row">
+            <div class="col-lg-8">            
+              <ul>
+                <li><strong><i class="bi bi-check2-square"></i>20+ years Leadership, Development, Coaching and HR
+                    experience</strong>
+                </li>
+                <li><strong><i class="bi bi-check2-square"></i>EMCC Accredited Executive Coach, Senior
+                    Practitioner</strong></li>
+                <li><strong><i class="bi bi-check2-square"></i>ICF Certified Emotions Coaching Practitioner</strong>
+                </li>
+                <li><strong><i class="bi bi-check2-square"></i>Leadership roles at Dyson, Pukka Herbs, Unilever, Lipton and Motorola</strong></li>
+              </ul>
+            </div>
+            <div class="col-lg-4">
+              <ul>
+                <li> <strong><i class="bi bi-check2-square"></i>MA Human Resources Management</strong>
+                </li>
+                <li><strong><i class="bi bi-check2-square"></i>Fellow CIPD</strong></li>
+                <li><strong><i class="bi bi-check2-square"></i>Board Trustee</strong></li>
+                <li><strong><i class="bi bi-check2-square"></i>Mental Health First Aider (MHFA England)</strong></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
