--- a/index.html
+++ b/index.html
@@ -394,23 +394,23 @@
           <div class="row">
             <div class="col-lg-8">            
               <ul>
-                <li><strong><i class="bi bi-check2-square"></i>20+ years Leadership, Development, Coaching and HR
+                <li><strong><i class="bi bi-square-fill"></i>20+ years Leadership, Development, Coaching and HR
                     experience</strong>
                 </li>
-                <li><strong><i class="bi bi-check2-square"></i>EMCC Accredited Executive Coach, Senior
+                <li><strong><i class="bi bi-square-fill"></i>EMCC Accredited Executive Coach, Senior
                     Practitioner</strong></li>
-                <li><strong><i class="bi bi-check2-square"></i>ICF Certified Emotions Coaching Practitioner</strong>
+                <li><strong><i class="bi bi-square-fill"></i>ICF Certified Emotions Coaching Practitioner</strong>
                 </li>
-                <li><strong><i class="bi bi-check2-square"></i>Leadership roles at Dyson, Pukka Herbs, Unilever, Lipton and Motorola</strong></li>
+                <li><strong><i class="bi bi-square-fill"></i>Leadership roles at Dyson, Pukka Herbs, Unilever, Lipton and Motorola</strong></li>
               </ul>
             </div>
             <div class="col-lg-4">
               <ul>
-                <li> <strong><i class="bi bi-check2-square"></i>MA Human Resources Management</strong>
+                <li> <strong><i class="bi bi-square-fill"></i>MA Human Resources Management</strong>
                 </li>
-                <li><strong><i class="bi bi-check2-square"></i>Fellow CIPD</strong></li>
-                <li><strong><i class="bi bi-check2-square"></i>Board Trustee</strong></li>
-                <li><strong><i class="bi bi-check2-square"></i>Mental Health First Aider (MHFA England)</strong></li>
+                <li><strong><i class="bi bi-square-fill"></i>Fellow CIPD</strong></li>
+                <li><strong><i class="bi bi-square-fill"></i>Board Trustee</strong></li>
+                <li><strong><i class="bi bi-square-fill"></i>Mental Health First Aider (MHFA England)</strong></li>
               </ul>
             </div>
           </div>
