--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Beside: Executive Coaching, Culture Consultancy, and HR Mentoring.</title>
-  <meta property="og:description" content="I'm here as your coach, consultant and mentor. As a Chief People Officer, I've held integral roles building and steering global leadership teams through transformational change and growth. One-on-one structured coaching programmes for leaders. Consulting or mentoring – getting involved from within. Online. In person. On foot. Tailored. Constant progress." name="description">
+  <meta property="og:description"
+    content="I'm here as your coach, consultant and mentor. As a Chief People Officer, I've held integral roles building and steering global leadership teams through transformational change and growth. One-on-one structured coaching programmes for leaders. Consulting or mentoring – getting involved from within. Online. In person. On foot. Tailored. Constant progress."
+    name="description">
   <meta content="Executive Coach, Culture Consultant, HR Mentor." name="keywords">
   <meta name="image" property="og:image" content="assets/img/profile.webp">
   <meta name="author" content="Suzy Stollery">
@@ -197,7 +199,7 @@
 
         <div class="testimonials-slider swiper" data-aos="zoom-in" data-aos-delay="100">
           <div class="swiper-wrapper">
-            
+
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <h3>Will</h3>
@@ -347,14 +349,16 @@
                 <h3>James</h3>
                 <h4>Former Chair, Pukka Herbs </h4>
                 <p>
-                  <strong>“ </strong>Pukka's culture benefited hugely from Suzy’s Leadership as People Director. 
-                  Her culture work ensured that the purpose and values that were outwardly expressed were truly present within and without compromise. 
-                  Finding people with the skill to translate the often ethereal into grounded practice is a rare thing. 
-                  Suzy has that in abundance, as well a natural sensitivity that enables her to bring people with her in a very thoughtful and considered way.<strong>”</strong>
+                  <strong>“ </strong>Pukka's culture benefited hugely from Suzy’s Leadership as People Director.
+                  Her culture work ensured that the purpose and values that were outwardly expressed were truly present
+                  within and without compromise.
+                  Finding people with the skill to translate the often ethereal into grounded practice is a rare thing.
+                  Suzy has that in abundance, as well a natural sensitivity that enables her to bring people with her in
+                  a very thoughtful and considered way.<strong>”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
-            
+
           </div>
           <div class="swiper-pagination"></div>
         </div>
@@ -406,16 +410,19 @@
             <h3>Experience</h3>
           </div>
           <div class="row">
-            <div class="col-lg-8">            
+            <div class="col-lg-8">
               <ul>
-                <li><strong><i class="bi bi-square-fill"></i>20+ years Leadership, Development, Coaching and HR
+                <li><strong><i class="bi bi-square-fill"></i>25 years Leadership, Development, Coaching and HR
                     experience</strong>
                 </li>
                 <li><strong><i class="bi bi-square-fill"></i>EMCC Accredited Executive Coach, Senior
                     Practitioner</strong></li>
                 <li><strong><i class="bi bi-square-fill"></i>ICF Certified Emotions Coaching Practitioner</strong>
                 </li>
-                <li><strong><i class="bi bi-square-fill"></i>Leadership roles at Dyson, Pukka Herbs, Unilever, Lipton and Motorola</strong></li>
+                <li><strong><i class="bi bi-square-fill"></i>Accredited PRINT® Practitioner</strong>
+                </li>
+                <li><strong><i class="bi bi-square-fill"></i>Leadership roles at Dyson, Pukka Herbs, Unilever, Lipton
+                    and Motorola</strong></li>
               </ul>
             </div>
             <div class="col-lg-4">
@@ -480,7 +487,7 @@
           <img src="assets/img/EMCC accreditation logo SP.svg" loading="lazy"
             alt="EIA EMCC logo. I'm a Global EMCC Accredited Coach at Senior Practitioner Level."
             data-bs-toggle="popover" data-bs-trigger="hover focus"
-            data-bs-content="I'm a Global EMCC Accredited Coach at Senior Practitioner Level" data-bs-placement="bottom"
+            data-bs-content="I'm a Global EMCC Accredited Executive Coach at Senior Practitioner Level" data-bs-placement="bottom"
             data-bs-custom-class="custom-popover" />
         </div>
         <div class="col-4 col-lg-2">
@@ -490,18 +497,17 @@
             data-bs-content="I'm a certified Emotions Coaching Practitioner" data-bs-placement="bottom"
             data-bs-custom-class="custom-popover" />
         </div>
-        <div class="col-4 col-lg-2">
-          <img src="assets/img/hult-logo-black.svg" loading="lazy"
-            alt="Ashridge-Hult logo. I'm an Accredited Executive Coach at Hult Ashridge Executive Education."
-            data-bs-toggle="popover" data-bs-trigger="hover focus"
-            data-bs-content="I'm an Accredited Executive Coach at Hult Ashridge Executive Education"
-            data-bs-placement="bottom" data-bs-custom-class="custom-popover" />
-        </div>
         <div class="col-3 col-lg-1">
           <img src="assets/img/Mental-Health-First-Aider.svg" loading="lazy"
             alt="Mental Health First Aider logo. I'm a Certified Mental Health First Aider." data-bs-toggle="popover"
             data-bs-trigger="hover focus" data-bs-content="I'm a Certified Mental Health First Aider"
             data-bs-placement="bottom" data-bs-custom-class="custom-popover" />
+        </div>
+        <div class="col-3 col-lg-1">
+          <img src="assets/img/print-badge.png" loading="lazy" alt="PRINT® logo. I'm a Accredited PRINT® Practitioner."
+            data-bs-toggle="popover" data-bs-trigger="hover focus"
+            data-bs-content="I'm a Accredited PRINT® Practitioner" data-bs-placement="bottom"
+            data-bs-custom-class="custom-popover" class="img-fluid" />
         </div>
       </div>
 
